--- a/css/thesheet.css
+++ b/css/thesheet.css
@@ -7,9 +7,10 @@ table{
     background-color:#DE3F51;
 }
 
-.imgholder{
-    margin:auto;
-    width:50%;
+.imgholder {
+    margin: auto;
+    width: 500px;
+    max-width:500px;
 }
 
 #table4exercise{
@@ -22,4 +23,14 @@ td{
     border-width: 2px;
     border-color: white;
     border-style: solid;
+}
+
+.img-center {
+    margin-left: auto;
+    margin-right: auto;
+    display:block;
+}
+
+.hoverthing{
+
 }
